// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Banner Basic 1`] = `
<div
  className="psds-banner psds-banner--color-blue"
>
  <p
    className="psds-banner__text"
    data-css-17nixd9=""
  >
    Banner text
  </p>
</div>
`;

exports[`Storyshots Components/Banner Button 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr 1fr",
    }
  }
>
  <div
    className="psds-banner psds-banner--color-blue"
  >
    <p
      className="psds-banner__text"
      data-css-17nixd9=""
    >
      blue
       with button
       
      <button
        className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-stroke psds-theme--dark psds-banner__button psds-banner__button--color-blue overridden"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Button
        </span>
      </button>
    </p>
    <button
      className="psds-banner__dismiss"
      onClick={[Function]}
    >
      <div
        data-css-7dab2f=""
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    className="psds-banner psds-banner--color-green"
  >
    <p
      className="psds-banner__text"
      data-css-17nixd9=""
    >
      green
       with button
       
      <button
        className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-stroke psds-theme--dark psds-banner__button psds-banner__button--color-green overridden"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Button
        </span>
      </button>
    </p>
    <button
      className="psds-banner__dismiss"
      onClick={[Function]}
    >
      <div
        data-css-7dab2f=""
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    className="psds-banner psds-banner--color-yellow"
  >
    <p
      className="psds-banner__text"
      data-css-17nixd9=""
    >
      yellow
       with button
       
      <button
        className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-stroke psds-theme--dark psds-banner__button psds-banner__button--color-yellow overridden"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Button
        </span>
      </button>
    </p>
    <button
      className="psds-banner__dismiss"
      onClick={[Function]}
    >
      <div
        data-css-7dab2f=""
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    className="psds-banner psds-banner--color-red"
  >
    <p
      className="psds-banner__text"
      data-css-17nixd9=""
    >
      red
       with button
       
      <button
        className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-stroke psds-theme--dark psds-banner__button psds-banner__button--color-red overridden"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Button
        </span>
      </button>
    </p>
    <button
      className="psds-banner__dismiss"
      onClick={[Function]}
    >
      <div
        data-css-7dab2f=""
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Banner Child Anchor 1`] = `
<div
  className="psds-banner psds-banner--color-blue"
>
  <p
    className="psds-banner__text"
    data-css-17nixd9=""
  >
    this is the text with an 
    <a
      href="https://duckduckgo.com"
    >
      anchor tag
    </a>
    .
  </p>
</div>
`;

exports[`Storyshots Components/Banner Child Anchor Yellow 1`] = `
<div
  className="psds-banner psds-banner--color-yellow"
>
  <p
    className="psds-banner__text"
    data-css-17nixd9=""
  >
    this is the text with an 
    <a
      href="https://duckduckgo.com"
    >
      anchor tag
    </a>
    .
  </p>
</div>
`;

exports[`Storyshots Components/Banner Child Link 1`] = `
<div
  className="psds-banner psds-banner--color-blue"
>
  <p
    className="psds-banner__text"
    data-css-17nixd9=""
  >
    this is the text with an
     
    <a
      data-css-1o01808=""
      href="https://duckduckgo.com"
    >
      Link component
    </a>
  </p>
</div>
`;

exports[`Storyshots Components/Banner Colors 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr 1fr",
    }
  }
>
  <div
    className="psds-banner psds-banner--color-blue"
  >
    <p
      className="psds-banner__text"
      data-css-17nixd9=""
    >
      blue
    </p>
    <button
      className="psds-banner__dismiss"
      onClick={[Function]}
    >
      <div
        data-css-7dab2f=""
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    className="psds-banner psds-banner--color-green"
  >
    <p
      className="psds-banner__text"
      data-css-17nixd9=""
    >
      green
    </p>
    <button
      className="psds-banner__dismiss"
      onClick={[Function]}
    >
      <div
        data-css-7dab2f=""
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    className="psds-banner psds-banner--color-yellow"
  >
    <p
      className="psds-banner__text"
      data-css-17nixd9=""
    >
      yellow
    </p>
    <button
      className="psds-banner__dismiss"
      onClick={[Function]}
    >
      <div
        data-css-7dab2f=""
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    className="psds-banner psds-banner--color-red"
  >
    <p
      className="psds-banner__text"
      data-css-17nixd9=""
    >
      red
    </p>
    <button
      className="psds-banner__dismiss"
      onClick={[Function]}
    >
      <div
        data-css-7dab2f=""
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Banner On Click 1`] = `
<div
  className="psds-banner psds-banner--color-blue"
>
  <p
    className="psds-banner__text"
    data-css-17nixd9=""
  >
    Banner text
  </p>
  <button
    className="psds-banner__dismiss"
    onClick={[Function]}
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Storyshots Components/Banner On Click Long Text 1`] = `
<div
  className="psds-banner psds-banner--color-blue"
>
  <p
    className="psds-banner__text"
    data-css-17nixd9=""
  >
    this is the long text. this is the long text. this is the long text. this
  is the long text. this is the long text. this is the long text. this is
  the long text. this is the long text. this is the long text. this is the
  long text. this is the long text. this is the long text.{' '} 
  </p>
  <button
    className="psds-banner__dismiss"
    onClick={[Function]}
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Storyshots Components/Banner Style Class Name 1`] = `
<div
  className="psds-banner psds-banner--color-blue someClass"
>
  <p
    className="psds-banner__text"
    data-css-17nixd9=""
  >
    Banner text
  </p>
</div>
`;

exports[`Storyshots Components/Banner Style Prop 1`] = `
<div
  className="psds-banner psds-banner--color-blue"
  style={
    Object {
      "outline": "3px solid red",
    }
  }
>
  <p
    className="psds-banner__text"
    data-css-17nixd9=""
  >
    Banner text
  </p>
</div>
`;
